fixed spacing below toolbar

--- a/analytics-challenge/src/app/toolbar/toolbar.component.css
+++ b/analytics-challenge/src/app/toolbar/toolbar.component.css
@@ -5,4 +5,5 @@
 .toolbar {
     color: white;
     background-color: #161b3b !important;
+    margin-bottom: 1%;
 }
